--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@designbycode/tailwindcss-text-stroke": "^1.2.1",
+    "@upstash/redis": "^1.34.3",
     "next": "14.2.15",
     "react": "^18",
     "react-dom": "^18"
