--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "@upstash/redis": "^1.34.3",
     "next": "14.2.15",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "resend": "^4.0.1"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^1.9.0",
